--- a/xcconfig_template/Configuration/config.plist
+++ b/xcconfig_template/Configuration/config.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>Common</key>
 	<dict>
+		<key>base_url</key>
+		<string>https://content.guardianapis.com</string>
+		<key>format</key>
+		<string>json</string>
 		<key>hokeyapp_id</key>
 		<string>6868687hh5h5588</string>
 		<key>firbase_id</key>
@@ -11,15 +15,11 @@
 	</dict>
 	<key>Production</key>
 	<dict>
-		<key>base_url</key>
-		<string>https://content.guardianapis.com</string>
 		<key>api_key</key>
 		<string>e35a31b0-e2db-4446-8dba-271926bcb741</string>
 	</dict>
 	<key>Development</key>
 	<dict>
-		<key>base_url</key>
-		<string>https://content.guardianapis.com</string>
 		<key>api_key</key>
 		<string>test</string>
 	</dict>
