--- a/xcconfig_template/Configuration/Release.xcconfig
+++ b/xcconfig_template/Configuration/Release.xcconfig
@@ -9,7 +9,7 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-//#include "../Pods/Target Support Files/Pods-NSScreencast-Base-NSScreencast/Pods-NSScreencast-Base-NSScreencast.release.xcconfig"
+#include "Pods/Target Support Files/Pods-xcconfig_template/Pods-xcconfig_template.release.xcconfig"
 #include "Shared.xcconfig"
 
 Environment=Production
