--- a/xcconfig_template/Configuration/Debug.xcconfig
+++ b/xcconfig_template/Configuration/Debug.xcconfig
@@ -11,5 +11,7 @@
 
 #include "Shared.xcconfig"
 #include "Pods/Target Support Files/Pods-xcconfig_template/Pods-xcconfig_template.debug.xcconfig"
+#include "Pods/Target Support Files/Pods-AHFramework/Pods-AHFramework.debug.xcconfig"
 
 Environment=Debug
+ 
