--- a/xcconfig_template/Configuration/Development.xcconfig
+++ b/xcconfig_template/Configuration/Development.xcconfig
@@ -11,5 +11,6 @@
 
 #include "Shared.xcconfig"
 #include "Pods/Target Support Files/Pods-xcconfig_template/Pods-xcconfig_template.development.xcconfig"
+#include "Pods/Target Support Files/Pods-AHFramework/Pods-AHFramework.development.xcconfig"
 
 Environment=Development
