--- a/xcconfig_template.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
+++ b/xcconfig_template.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "521866EA2267AF78002DCB40"
-               BuildableName = "xcconfig_template.app"
+               BuildableName = "xcconfig.app"
                BlueprintName = "xcconfig_template"
                ReferencedContainer = "container:xcconfig_template.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "521866EA2267AF78002DCB40"
-            BuildableName = "xcconfig_template.app"
+            BuildableName = "xcconfig.app"
             BlueprintName = "xcconfig_template"
             ReferencedContainer = "container:xcconfig_template.xcodeproj">
          </BuildableReference>
@@ -56,7 +56,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "521866EA2267AF78002DCB40"
-            BuildableName = "xcconfig_template.app"
+            BuildableName = "xcconfig.app"
             BlueprintName = "xcconfig_template"
             ReferencedContainer = "container:xcconfig_template.xcodeproj">
          </BuildableReference>
@@ -75,7 +75,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "521866EA2267AF78002DCB40"
-            BuildableName = "xcconfig_template.app"
+            BuildableName = "xcconfig.app"
             BlueprintName = "xcconfig_template"
             ReferencedContainer = "container:xcconfig_template.xcodeproj">
          </BuildableReference>
