added Component for building generic UI

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 xcconfig_template.xcworkspace/xcuserdata/test.xcuserdatad/UserInterfaceState.xcuserstate
+**/.DS_Store
+*.xcuserstate
+*.xcuserdatad
+*.xcuserstate
